[package]
name = "grapho"
version = "0.1.2"
edition = "2024"
description = "Personal memory system CLI — add, demote, promote, review entries across MEMORY.md and solutions KB"
license = "MIT"
repository = "https://github.com/terry-li-hm/grapho"
keywords = ["cli", "memory", "knowledge", "personal", "notes"]
categories = ["command-line-utilities"]

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "6"
chrono = "0.4"
owo-colors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[workspace]
